--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: NotesAppCI
+name: NotesAppHeroku
 
 on:
   push:
@@ -10,14 +10,13 @@ on:
     branches: ["master"]
 
 jobs:
-  build:
+  build-test:
+    name: build and publish
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        node-version: [18.x]
+    #     # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -25,16 +24,52 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
-      - run: yarn
-      - run: yarn run build
+      - run: yarn install
+      - run: yarn build
 
-  deploy:
+  push-to-Docker-Hub:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: [build]
+    # build docker image and push to docker hub
+    # only if the app build and test successfully
+    needs: [build-test]
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "notes-app-reactjs-dvv" #Must be unique in Heroku
-          heroku_email: "datvnu88@gmail.com"
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/notes-app-reactjs:latest
+
+  deploy_to_heroku:
+    runs-on: ubuntu-latest
+    # only run this fater deploying to docker
+    needs: [push-to-Docker-Hub]
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
+      # more info on deploy to heroku:
+      # https://github.com/marketplace/actions/deploy-to-heroku
+      - name: deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          # build the app docker image using the Dockerfile
+          # and run that image in a container that's pushed to heroku
+          usedocker: true
